Add Filter method in ToDoController
