# ui/references/swagger.yaml
@@ -54,6 +54,80 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/WebErrorResult'
+  /Todo/GetFiltered:
+    get:
+      tags:
+        - Todo
+      parameters:
+        - name: Id.Min
+          in: query
+          schema:
+            type: integer
+            format: int32
+        - name: Id.Max
+          in: query
+          schema:
+            type: integer
+            format: int32
+        - name: Description
+          in: query
+          schema:
+            type: string
+        - name: IsComplete
+          in: query
+          schema:
+            type: boolean
+        - name: CreatedOnUtc.Min
+          in: query
+          schema:
+            type: string
+            format: date-time
+        - name: CreatedOnUtc.Max
+          in: query
+          schema:
+            type: string
+            format: date-time
+        - name: LastModifiedOnUtc.Min
+          in: query
+          schema:
+            type: string
+            format: date-time
+        - name: LastModifiedOnUtc.Max
+          in: query
+          schema:
+            type: string
+            format: date-time
+        - name: Page
+          in: query
+          schema:
+            type: integer
+            format: int32
+        - name: PerPage
+          in: query
+          schema:
+            type: integer
+            format: int32
+        - name: SortBy
+          in: query
+          schema:
+            $ref: '#/components/schemas/Sorting'
+        - name: Sort
+          in: query
+          schema:
+            type: string
+        - name: CombineWith
+          in: query
+          schema:
+            $ref: '#/components/schemas/CombineType'
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ToDoItem'
   '/Todo/{id}':
     get:
       tags:
@@ -115,6 +189,18 @@ components:
         isComplete:
           type: boolean
       additionalProperties: false
+    CombineType:
+      enum:
+        - 0
+        - 1
+      type: integer
+      format: int32
+    Sorting:
+      enum:
+        - 0
+        - 1
+      type: integer
+      format: int32
     ToDoItem:
       required:
         - createdOnUtc
